# backend/src/main/java/de/nordakademie/iaa/library/controller/api/exception/MaximumExtensionsException.java
@@ -1,0 +1,10 @@
+package de.nordakademie.iaa.library.controller.api.exception;
+
+import org.springframework.http.HttpStatus;
+
+public class MaximumExtensionsException extends AbstractRestApiException{
+
+    public MaximumExtensionsException() {
+        super(HttpStatus.BAD_REQUEST, "The assignment has reached the maximum extensions.");
+    }
+}
